--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,5 +153,7 @@
     <string name="item_product_menu">Menu</string>
     <string name="menu_dinner_label">Dinner</string>
     <string name="menu_dinner_select">Select menu</string>
+    <string name="config_settings_label">Global params</string>
+    <string name="config_global_theme">Theme</string>
 
 </resources>
