--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,5 +155,6 @@
     <string name="menu_dinner_select">Select menu</string>
     <string name="config_settings_label">Global params</string>
     <string name="config_global_theme">Theme</string>
+    <string name="common_actions_label">Select action from list</string>
 
 </resources>
