--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -147,5 +147,10 @@
 
     <string name="config_settings_label">Глобальные настройки</string>
     <string name="config_global_theme">Тема</string>
+    <string name="menu_dinner_label">Пища</string>
+    <string name="menu_dinner_select">Меню</string>
+    <string name="menu_event_add_other">Другое</string>
+    <string name="common_actions_label">Выберите действие</string>
+    <string name="label_other_value">Значение показателя</string>
 
 </resources>
