--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,7 +156,8 @@
     <string name="menu_dinner_select">Select menu</string>
     <string name="config_settings_label">Global params</string>
     <string name="config_global_theme">Theme</string>
-    <string name="common_actions_label">Select action from list</string>
-    <string name="label_other_value">Indicator value</string>
+
+    <string name="other_actions_label">Select action from list</string>
+    <string name="other_value_label">Indicator value</string>
 
 </resources>
