refactoring code add theme definitions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="label_mode_add">Add</string>
     <string name="label_mode_edit">Edit</string>
     <string name="label_mode_cancel">Cancel</string>
+    <string name="label_mode_confirm">Confirm</string>
 
     <string name="insulin_label">Insulins</string>
     <string name="menu_event_add_inject">Add inject</string>
